improved flag design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="to">
                     <p>To</p>
                     <div class="select-input">
-                        <img src="https://flagcdn.com/48x36/gb.png">
+                        <img src="https://flagcdn.com/48x36/in.png">
                         <select></select>
                     </div>
                 </div>
